# lpd-sockets

./: .clangd  .gitignore  Doxyfile  README.md  meson.build  mingw-w64-ucrt-x86_64.ini
buildaux/meson/: copy.rb
doc/: Doxyfile
src/: client.c  horoscope.txt  horoscopeserver.c  horoserver.c  meson.build  server.c  tcpclient.c  tcpclient.h  tcpserver.c  tcpserver.h  types.h  util.c  util.h  weather.c  weather.h  weatherserver.c
src/client/: main.c
src/server/: main.c  tcpserver.h
